[package]
name = "aurelian-desktop"
version = "0.1.0"
description = "Local Inference"
authors = ["Ethan Steere"]
license = "MIT License"
repository = "https://github.com/aurelianai/Aurelian-Desktop"
default-run = "aurelian-desktop"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = [ "shell-open", "fs-all", "http-all", "path-all", "process-command-api"] }
reqwest = { version = "0.11", features= ["json"] }
llm = { git = "https://github.com/rustformers/llm", version = "0.2.0-dev" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
serde = "1.0.185"
rand = "0.8.5"
num_cpus = "1.16.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
